# transition-pilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
demo/: record_demo.py
demo/ui/: app.js  index.html  style.css
deploy/: Dockerfile  README.md  railway.json
src/transition_pilot/: __init__.py  fhir_client.py  mcp_app.py  reconciliation.py  schemas.py  server.py  synthesis.py
src/transition_pilot/cases/: ahrq_warfarin_tmp_smx.json  case_2_duplicate_opioid.json  case_3_insulin_no_glucose.json  case_4_hf_no_followup.json  case_5_allergy_conflict.json
tests/: test_mcp_endpoint.py  test_reconciliation.py
